--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,7 +13,18 @@ collections:
     fields: # The fields for each document, usually in front matter
       - { label: "title", name: "title", widget: "string" }
       - { label: "date", name: "date", widget: "datetime" }
-      - { tags: "tags", name: "tags", widget: "list" }
+      - { tags: "tags", name: "tags", widget: "string" }
+      - { label: "body", name: "body", widget: "markdown" }
+
+  - name: "post/2025" # Used in routes, e.g., /admin/collections/blog
+    label: "2025 posts" # Used in the UI
+    folder: "content/post/2025" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields: # The fields for each document, usually in front matter
+      - { label: "title", name: "title", widget: "string" }
+      - { label: "date", name: "date", widget: "datetime" }
+      - { tags: "tags", name: "tags", widget: "string" }
       - { label: "body", name: "body", widget: "markdown" }
 
   - name: "page"
@@ -24,7 +35,7 @@ collections:
     fields:
       - { label: "title", name: "title", widget: "string" }
       - { label: "date", name: "date", widget: "datetime" }
-      - { tags: "tags", name: "tags", widget: "list" }
+      - { tags: "tags", name: "tags", widget: "string" }
       - { label: "body", name: "body", widget: "markdown" }
 
   - name: "current" # Used in routes, e.g., /admin/collections/blog
@@ -35,5 +46,5 @@ collections:
     fields: # The fields for each document, usually in front matter
       - { label: "title", name: "title", widget: "string" }
       - { label: "date", name: "date", widget: "datetime" }
-      - { tags: "tags", name: "tags", widget: "list" }
+      - { tags: "tags", name: "tags", widget: "string" }
       - { label: "body", name: "body", widget: "markdown" }
